src/main/kotlin/com/example/munjeongminbackend/global/error/custom/ErrorProperty.kt
package com.example.munjeongminbackend.global.error.custom

interface ErrorProperty {
    fun status(): Int
    fun message(): String
}